Am adaugat produse /  Si partea de footer/header

--- a/eUseControl.BeekeepingStore/Content/Site.css
+++ b/eUseControl.BeekeepingStore/Content/Site.css
@@ -124,3 +124,12 @@ footer {
         .products-page .product p {
             color: #666;
         }
+        .products-page .product .price {
+            font-weight: bold;
+            color: #333;
+        }
+
+        .products-page .product .category {
+            font-style: italic;
+            color: #999;
+        }
