--- a/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#search-bar">Search</a>
                 </li>
+                <li>
+                    <a class="nav-link" href="@Url.Action("Cart", "Home")"><i class="fas fa-shopping-basket"></i></a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
