--- a/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
@@ -95,7 +95,7 @@
                     <p class="product-card-text">Everything you need to get started with beekeeping.</p>
                     <div class="product-card-price">$99.99</div>
                     <div class="product-card-footer">
-                        <button class="btn btn-primary add-to-cart-btn" data-product-id="1" data-product-name="Complete Beekeeping Kit">
+                        <button class="btn btn-primary add-to-cart-btn" data-product-id="1" data-product-name="Complete Beekeeping Kit" data-product-price="99.99" data-product-image="/Content/Images/products/beekeepingkit.jpg">
                             <i class="fas fa-shopping-cart"></i> Add to Cart
                         </button>
                     </div>
@@ -114,7 +114,7 @@
                     <p class="product-card-text">Stay safe while working with your bees.</p>
                     <div class="product-card-price">$49.99</div>
                     <div class="product-card-footer">
-                        <button class="btn btn-primary add-to-cart-btn" data-product-id="2" data-product-name="Professional Protective Gear">
+                        <button class="btn btn-primary add-to-cart-btn" data-product-id="2" data-product-name="Professional Protective Gear" data-product-price="49.99" data-product-image="/Content/Images/products/protectivegear.png">
                             <i class="fas fa-shopping-cart"></i> Add to Cart
                         </button>
                     </div>
@@ -134,7 +134,7 @@
                     <p class="product-card-text">Tools and equipment for extracting honey.</p>
                     <div class="product-card-price">$199.99</div>
                     <div class="product-card-footer">
-                        <button class="btn btn-primary add-to-cart-btn" data-product-id="3" data-product-name="Premium Honey Extractor">
+                        <button class="btn btn-primary add-to-cart-btn" data-product-id="3" data-product-name="Premium Honey Extractor" data-product-price="199.99" data-product-image="/Content/Images/products/extractorforhoney.jpg">
                             <i class="fas fa-shopping-cart"></i> Add to Cart
                         </button>
                     </div>
@@ -153,7 +153,7 @@
                     <p class="product-card-text">A high-quality bee hive for your bees.</p>
                     <div class="product-card-price">$149.99</div>
                     <div class="product-card-footer">
-                        <button class="btn btn-primary add-to-cart-btn" data-product-id="4" data-product-name="Langstroth Bee Hive">
+                        <button class="btn btn-primary add-to-cart-btn" data-product-id="4" data-product-name="Langstroth Bee Hive" data-product-price="149.99" data-product-image="/Content/Images/products/beehive.jpg">
                             <i class="fas fa-shopping-cart"></i> Add to Cart
                         </button>
                     </div>
