--- a/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
@@ -53,7 +53,7 @@
                     
                     <a class="nav-link position-relative me-3" href="@Url.Action("Cart", "Home")">
                         <i class="fas fa-shopping-cart fs-5"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger cart-badge">
                             0
                             <span class="visually-hidden">items in cart</span>
                         </span>
