--- a/eUseControl.BeekeepingStore/Views/Home/Cart.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Cart.cshtml
@@ -8,9 +8,14 @@
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1 class="mb-0">Shopping Cart</h1>
-                <a href="@Url.Action("Products", "Home")" class="btn btn-outline-primary">
-                    <i class="fas fa-arrow-left me-2"></i>Continue Shopping
-                </a>
+                <div>
+                    <button class="btn btn-outline-danger me-2 clear-cart-btn">
+                        <i class="fas fa-trash me-2"></i>Clear Cart
+                    </button>
+                    <a href="@Url.Action("Products", "Home")" class="btn btn-outline-primary">
+                        <i class="fas fa-arrow-left me-2"></i>Continue Shopping
+                    </a>
+                </div>
             </div>
             <hr>
         </div>
