--- a/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
@@ -20,6 +20,26 @@
     </div>
 </section>
 
+<!-- Administrare Produse-->
+<section class="container py-4">
+    <div class="row">
+        <div class="col-12">
+            <div class="card-body">
+                <h3 class="card-title">Manage Products</h3>
+                <p class="card-text">Add, edit or remove products from store.</p>
+                <div class="d-flex gap-2">
+                    <a href="@Url.Action("Index", "Product")" class="btn btn-primary">
+                        <i class="fas fa-list"></i> View Products
+                    </a>
+                    <a href="@Url.Action("Create", "Product")" class="btn btn-success">
+                        <i class="fas fa-plus"></i> Add New Product
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Categories Section -->
 <section class="container py-5">
     <div class="section-title">
