--- a/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
@@ -1,4 +1,4 @@
-<header>
+﻿<header>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="@Url.Action("Index", "Home")">
@@ -41,6 +41,16 @@
                             <i class="fas fa-blog"></i> Blog
                         </a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-cogs"></i> Administration
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                            <li><a class="dropdown-item" href="@Url.Action("Index", "Product")"><i class="fas fa-list"></i> Product list</a></li>
+                            <li><a class="dropdown-item" href="@Url.Action("Create", "Product")"><i class="fas fa-plus"></i> Add product</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <div class="d-flex align-items-center">
@@ -65,7 +75,7 @@
                             <i class="fas fa-user-circle fs-5"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="@Url.Action("Login", "Home")"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                            <li><a class="dropdown-item" href="@Url.Action("Login", "Account")"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                             <li><a class="dropdown-item" href="@Url.Action("Register", "Account")"><i class="fas fa-user-plus"></i> Register</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-cog"></i> My Account</a></li>
