--- a/eUseControl.BeekeepingStore/Views/Product/Delete.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Product/Delete.cshtml
@@ -23,7 +23,7 @@
                 <dd class="col-sm-9">@Model.Name</dd>
 
                 <dt class="col-sm-3">Price:</dt>
-                <dd class="col-sm-9">@Model.Price.ToString("C")</dd>
+                <dd class="col-sm-9">@Model.Price.ToString("C", new System.Globalization.CultureInfo("ro-MD"))</dd>
 
                 <dt class="col-sm-3">Category:</dt>
                 <dd class="col-sm-9">@Model.Category</dd>
