--- a/eUseControl.BeekeepingStore/Views/Product/Details.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Product/Details.cshtml
@@ -37,7 +37,7 @@
                         <dd class="col-sm-9">@(string.IsNullOrEmpty(Model.Description) ? "No description" : Model.Description)</dd>
 
                         <dt class="col-sm-3">Price:</dt>
-                        <dd class="col-sm-9">@Model.Price.ToString("C")</dd>
+                        <dd class="col-sm-9">@Model.Price.ToString("C", new System.Globalization.CultureInfo("ro-MD"))</dd>
 
                         <dt class="col-sm-3">Category:</dt>
                         <dd class="col-sm-9">@Model.Category</dd>
